visibility resolve in circle dev

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ body {
     left: -5%;
     transform: translateX(0);
     opacity: 1;
+    visibility: visible;
     filter: drop-shadow(-15px 5px 5px #010101); }
   70% {
     filter: drop-shadow(10px -5px 5px #010101); }
@@ -103,6 +104,7 @@ body {
     left: 105%;
     transform: translateX(-100%);
     opacity: 1;
+    visibility: visible;
     filter: drop-shadow(10px -5px 5px #010101); } }
 
 @keyframes Shake {
@@ -201,7 +203,8 @@ body {
   height: 50px;
   filter: drop-shadow(-10px 5px 5px #010101);
   animation: MoveInRight 8s linear .75s;
-  opacity: 0; }
+  opacity: 0;
+  visibility: hidden; }
   .circle i {
     display: inline-block;
     font-size: 400%;
